--- a/src/pages/ChaseACard/cardGamePage.module.scss
+++ b/src/pages/ChaseACard/cardGamePage.module.scss
@@ -3,6 +3,7 @@
 .__card_game_content {
   position: relative;
   display: flex;
+  width: 100%;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -17,6 +18,9 @@
     align-items: center;
     margin: 0 0 40px 0;
     padding: 0;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
   }
 
   ._card_game_content_top {
@@ -47,15 +51,6 @@
       margin: 7px 0 0 0;
     }
 
-    .__card_divider {
-      display: flex;
-      width: 27.5px;
-      height: 3px;
-      background-color: $primary;
-      border-radius: 10px;
-      margin: 14px 0;
-    }
-
     .__card_game_Next_card_drawn_in {
       height: 20px;
       margin: 0 0 4px;
@@ -66,15 +61,20 @@
 
   .__card_game_content_cards {
     display: flex;
-    width: 823px;
-    justify-content: space-between;
+    width: 1044px;
+    justify-content: center;
+    align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
   }
 
   .__card_game_content_body {
     display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+    margin: 0 0 30px 0;
 
     .__reload_svg_icon {
       display: flex;
@@ -95,7 +95,7 @@
   }
 
   .__card_game_content_footer {
-    margin: 30.6px 0;
+    margin: 38.6px 0;
 
     .__card_game_footer_btn {
       border-radius: 34px;
@@ -105,5 +105,58 @@
       margin: 24px 0;
       width: 368px;
     }
+  }
+
+  .__sidebar_header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .__sidebar_header_title {
+      font-size: 24px;
+      margin: 10px 0;
+    }
+
+    .__sidebar_header_balance {
+      display: flex;
+      flex-direction: row;
+      background-color: $primaryLight;
+      padding: 8px 25px;
+      border: none;
+      border-radius: 30px;
+
+      .__sidebar_balance_text {
+        color: $primary;
+        font-weight: bold;
+        margin: 0 0 0 5px;
+        letter-spacing: normal;
+      }
+    }
+  }
+
+  .__sidebar_button_wrapper {
+    margin: 30px 0 0 0;
+    display: flex;
+    flex: 0.7;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 5px 0;
+
+    .__sidebar_reload_btn {
+      display: "flex";
+      height: 48px;
+      background-color: $primary;
+      border-radius: 80px;
+    }
+  }
+
+  .__card_game_info {
+    font-size: 22px;
+    padding: 0;
+    margin: 10px 0 -1rem 0;
+    width: 70%;
+    text-align: center;
   }
 }
