Power pick page

--- a/src/pages/PowerPicks/index.module.scss
+++ b/src/pages/PowerPicks/index.module.scss
@@ -3,12 +3,13 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  position: relative;
 
   .page_left {
     position: relative;
     display: flex;
-    flex: 1;
+    width: 90%;
+    margin: 0 auto;
     flex-direction: column;
     align-items: center;
   }
@@ -50,9 +51,60 @@
 
     .header_bottom {
       display: grid;
-      grid-template: repeat(3, minmax(120px, 150px));
-      // width: 50%;
-      // justify-content: space-evenly;
+      grid-template-columns: repeat(3, 200px);
+      gap: 10px;
+      justify-content: center;
+      align-items: center;
+
+      p {
+        font-size: 20px;
+        margin: 0;
+        padding: 0;
+      }
+
+      span {
+        font-size: 26px;
+        font-weight: bold;
+        color: $primary;
+      }
     }
+  }
+
+  .content_header {
+    display: flex;
+    width: 99%;
+    justify-content: space-around;
+    align-items: flex-end;
+    margin: 60px 0 10px 0;
+  }
+
+  .content_left {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+
+    .content_body {
+      margin: 0 0 40px 0;
+      display: flex;
+      flex-direction: column;
+      width: 82%;
+    }
+  }
+
+  .content_header_right {
+    display: flex;
+    flex-direction: row;
+    flex: 0.6;
+    justify-content: space-evenly;
+  }
+
+  .content_header_left {
+    color: $primary;
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
   }
 }
