--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,10 +1,12 @@
 $primary: #fb6e00;
 $black: #111111;
+$darkblack: #000;
 $lightBlack: #202124;
 $lightBlack2: #3b3c3e;
 $black2: #17181a;
 $white: #fff;
 $grey: #979797;
+$grey2: #f2f2f2;
 $lightGreen: #1bbc8633;
 $alertPrimary: #fb6e0026;
 $alertSuccess: #1bbc8626;
@@ -12,3 +14,6 @@ $alertDanger: #e7304e26;
 $danger: #e7304e;
 $success: #1bbc86;
 $primaryLight: #fb6e0033;
+$green: #4bb654;
+$yellow: #fbbc15;
+$orangeRed: #f44336;
