--- a/src/components/PowerpickCard/index.module.scss
+++ b/src/components/PowerpickCard/index.module.scss
@@ -5,6 +5,10 @@
   border: 2px solid $black;
   border-radius: 14px;
   background-color: $black2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .card_shadow {
