design-the-signin-page

--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -128,4 +128,13 @@
     .__default-size-on-small{
         font-size: 14px;
     }
+    .__h4-on-small{
+        font-size: 24px;
+    }
+    .__h5-on-small{
+        font-size: 20px;
+    }
+    .__mediam-on-small{
+        font-size: 16px;
+    }
 }
