--- a/src/components/PowerPickInfoCard/index.module.scss
+++ b/src/components/PowerPickInfoCard/index.module.scss
@@ -44,6 +44,8 @@
   }
 
   .content_card_grid_container {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     box-shadow: 0 4px 8px 0 rgba(4, 4, 4, 0.4);
     border-radius: 5px;
@@ -51,6 +53,7 @@
 
     .content_card_body {
       display: flex;
+      flex-direction: row;
 
       .content_card_body_left {
         display: flex;
@@ -59,7 +62,7 @@
         border-right: 1px solid $black;
 
         h1 {
-          margin: 5px 25px;
+          margin: -10px 30px;
           padding: 0;
           font-size: 32px;
           color: $black;
@@ -69,14 +72,19 @@
 
         .content_card_body_top {
           display: flex;
+          flex-direction: row;
+          flex: 1;
+          padding: 1rem 0.7rem;
 
           .content_card_body_left_sub {
             display: flex;
+            flex: 0.46;
             flex-direction: column;
-            padding: 0 1rem;
 
             h2 {
               padding: 0;
+              margin: 0;
+              width: 95%;
               font-size: 17px;
               border-bottom: 2px solid $primary;
               color: $primary;
@@ -86,6 +94,7 @@
               display: grid;
               grid-template-columns: repeat(2, minmax(80px, 86px));
               gap: 10px 0;
+              margin: 15px 0 0 0;
 
               span {
                 font-size: 14px;
@@ -161,6 +170,160 @@
           flex: 1;
           justify-content: center;
           align-items: center;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1224px) {
+  .content_card_grid_wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 10px 0;
+
+    .content_card_grid_container {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      box-shadow: none;
+      background-image: linear-gradient(to bottom, #111111, #232529);
+      border: 2px solid $black2;
+      border-radius: 10px;
+
+      .content_card_body {
+        display: flex;
+        flex-direction: column;
+        padding: 0.5rem;
+
+        .content_card_body_left {
+          display: flex;
+          flex-direction: column;
+          flex: 1;
+          border-right: none;
+
+          h1 {
+            left: 41%;
+            margin: 0px 11px 0 0;
+            padding: 0;
+            font-size: 20px;
+            color: $black;
+            text-shadow: -1px -1px 0 $white, 1px -1px 0 $white,
+              -1px 1px 0 $white, 1px 1px 0 $white;
+          }
+
+          .content_card_body_top {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            padding: 0;
+
+            .content_card_body_left_sub {
+              display: flex;
+              flex: 1;
+              flex-direction: column;
+
+              h2 {
+                padding: 0;
+                margin: 0;
+                width: 80%;
+                font-size: 12px;
+                border-bottom: 2px solid $primary;
+                color: $primary;
+              }
+
+              .content_card_body_info {
+                display: grid;
+                grid-template-columns: 55px 75px;
+                margin: 5px 0 0 0;
+
+                span {
+                  font-size: 12px;
+                }
+              }
+            }
+          }
+
+          .content_card_body_left_footer {
+            border-top: 2px solid $black;
+            margin: 20px 0 0 0;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 0.6rem;
+
+            .content_card_body_left_footer_info {
+              display: flex;
+
+              span {
+                font-size: 14px;
+                margin: 0 7px;
+              }
+            }
+          }
+        }
+
+        .content_card_body_right {
+          display: flex;
+          margin: 10px 0;
+          border-top: 2px solid $black;
+
+          .content_card_body_right_grid {
+            flex: 0.34;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin: 5px 0;
+            padding: 0;
+
+            .content_card_body_right_grid_title {
+              font-size: 12px;
+              margin: 0;
+              color: #dddddd;
+            }
+          }
+        }
+      }
+
+      .content_card_footer {
+        display: flex;
+        flex-direction: column-reverse;
+        padding: 0.7rem 0;
+        border: none;
+        border-radius: 0 0 5px 5px;
+        border-top: 2px solid $black2;
+        background-color: $lightBlack2;
+        justify-content: space-between;
+        align-items: center;
+
+        .content_card_footer_left {
+          display: flex;
+          flex: 1;
+          justify-content: center;
+          align-items: center;
+
+          span {
+            margin: 0 1rem;
+          }
+        }
+
+        .content_card_footer_right {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          width: 100%;
+          margin: 0 0 10px 0;
+
+          span {
+            font-weight: 600;
+            font-size: 18px;
+            display: flex;
+            flex: 1;
+            justify-content: center;
+            align-items: center;
+          }
         }
       }
     }
