--- a/src/components/PowerpickCard/index.module.scss
+++ b/src/components/PowerpickCard/index.module.scss
@@ -14,3 +14,21 @@
 .card_shadow {
   box-shadow: inset 0 1px 0 0 rgba(242, 242, 242, 0.6);
 }
+
+@media only screen and (max-width: 1224px) {
+  .card_wrapper {
+    padding: 10px;
+    border: 2px solid $black;
+    border-radius: 14px;
+    background-color: $black2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .card_shadow {
+    box-shadow: inset 0 1px 0 0 rgba(242, 242, 242, 0.6);
+  }
+}
