--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -91,6 +91,9 @@ svg{
     &.__-right::after{
         transform: rotate(45deg);
     }
+    &.__-bottom::after{
+        transform: rotate(135deg);
+    }
 }
 .__badge{
     background: linear-gradient(to right, #fb6e00 11%, #fa3800 94%);
@@ -141,38 +144,42 @@ label{
     padding: 0;
     margin: 0;
     position: relative;
-    width: 16px;
-    height: 16px;
+    min-width: 16px;
+    min-height: 16px;
     visibility: hidden;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    color: #f2f2f2;
     &::after, &::before{
         content: '';
         position: absolute;
         visibility: visible;
-    }
-    &::after{
-        width: 14px;
-        height: 14px;
         border-radius: 3px;
-        border: 1px solid #f2f2f2;
     }
     &::before{
-        min-width: 10px;
-        min-height: 10px;
-        border-radius: 1px;
+        left: 50%;
+        top: 50%;
+        border: 1px currentColor solid;
+        width: calc(100% - 2px);
+        height: calc(100% - 2px);
+        transform: translate(-50%, -50%);
+        background: transparent;
+    }
+    &::after{
+        left: 0;
+        height: 0;
+        width: 100%;
+        height: 100%;
         transform: scale(0);
+        background: currentColor;
         transition: linear 0.1s transform;
-        background: $primary;
     }
     &:checked{
+        color: $primary;
         &::after{
-            border-color: $primary;
-        }
-        &::before{
-            transform: scale(1);
+            transform: scale(0.7);
         }
     }
 }
