readded-the-home-page-background-image

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -2,7 +2,7 @@
 
 .__HomePage {
   overflow-y: hidden;
-  .__viewport_1 {
+  .__viewport-1 {
     background: url("../../assets/HomePageViewPortImage.jpg") top center;
   }
   .__viewport-subtitle {
