--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -18,14 +18,19 @@
             &:last-child{
                 margin-right: 0;
             }
-            a:hover, a.active{
-                color: $primary;
+            a:not(.__header-btn){
+                &:hover, &.active{
+                    color: $primary;
+                }
             }
         }
     }
     .__header-btn{
         padding: 0.329em;
         min-width: 122px;
+        a.active, a:hover{
+            color: #fff;
+        }
     }
     @media (max-width: 1200px) {
         padding: 1em 0;
