--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -3,6 +3,7 @@ $black: #111111;
 $darkblack: #000;
 $lightBlack: #202124;
 $lightBlack2: #3b3c3e;
+$lightGrey: #303133;
 $black2: #17181a;
 $white: #fff;
 $grey: #979797;
