--- a/src/pages/PowerPicks/index.module.scss
+++ b/src/pages/PowerPicks/index.module.scss
@@ -273,12 +273,13 @@
     }
 
     .content_header_right {
-      display: flex;
-      flex-direction: row;
-      overflow: scroll;
-      width: 95%;
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      gap: 5px 0;
+      justify-content: space-evenly;
+      align-items: flex-start;
+      width: 90%;
       margin: 0 auto;
-      padding: 0 0 0 13rem;
     }
 
     .content_header_left {
