remove-the-signin-route

--- a/src/pages/BingoPreGame/BingoPreGame.scss
+++ b/src/pages/BingoPreGame/BingoPreGame.scss
@@ -99,7 +99,7 @@
                     height: 50%;
                     background: #fff;
                 }
-                &.__free{
+                &.active{
                     >div{
                         color: inherit;
                     }
