--- a/src/pages/PowerPicks/index.module.scss
+++ b/src/pages/PowerPicks/index.module.scss
@@ -2,16 +2,23 @@
 
 .wrapper {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   position: relative;
+  width: 100%;
+  flex-wrap: wrap;
 
   .page_left {
     position: relative;
     display: flex;
-    width: 84%;
+    flex: 1 1 70%;
+    // width: 1124px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .page_sidebar {
+    flex: 1 1 7%;
   }
 
   .header {
@@ -114,7 +121,7 @@
         align-self: flex-end;
         position: absolute;
         bottom: -10px;
-        right: -50px;
+        right: -30px;
       }
     }
   }
@@ -122,8 +129,8 @@
   .content_header_right {
     display: flex;
     flex-direction: row;
-    flex: 0.6;
-    justify-content: space-evenly;
+    flex: 0.6 1 30%;
+    justify-content: flex-end;
   }
 
   .content_header_left {
@@ -136,6 +143,7 @@
   .sidebar {
     display: flex;
     flex-direction: column;
+    width: 100%;
     flex: 1;
     margin: -250px 0 0 0;
     justify-content: center;
