--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,220 +1,222 @@
-.__primary{
-    background: $primary;
+.__primary {
+  background: $primary;
 }
-.__uppercase{
-    text-transform: uppercase;
+.__uppercase {
+  text-transform: uppercase;
 }
-svg{
-    height: 1.3em;
+svg {
+  height: 1.3em;
 }
-.__btn{
-    padding: 0.5em 1em;
-    @extend .__primary;
-    border-radius: 6px;
-    cursor: pointer;
-    font-weight: 500;
-    color: #fff;
-    text-align: center;
-    border: 1px solid $primary;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 9em;
-    &.__style-2{
-        background: transparent;
-        border-color: currentColor;
+.__btn {
+  padding: 0.5em 1em;
+  @extend .__primary;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 500;
+  color: #fff;
+  text-align: center;
+  border: 1px solid $primary;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  // min-width: 9em;
+  &.__style-2 {
+    background: transparent;
+    border-color: currentColor;
+  }
+  &.__style-3 {
+    border-radius: 2em;
+    padding: 0.4em 2.29em;
+  }
+  &.__shadow {
+    box-shadow: 0 3px 27px 0 rgba(251, 110, 0, 0.48);
+  }
+  &.__shadow-2 {
+    box-shadow: 0 3px 27px 0 #fb6e00;
+  }
+  &.__large-btn {
+    padding: 0.563em 1.1em;
+    min-width: 10.625em;
+  }
+}
+.__primary-color {
+  color: $primary;
+}
+.__dark-white-color {
+  color: #f2f2f2;
+  &.__shade-2 {
+    color: rgba($color: #f2f2f2, $alpha: 0.5);
+  }
+}
+.__white-color {
+  color: #fff !important;
+  border-color: #fff !important;
+}
+.__white {
+  background: #fff;
+  border-color: #fff;
+  color: #000;
+}
+.__unordered-list {
+  list-style-type: none;
+  padding: 0;
+  > li {
+    margin: 1.2em 0;
+    padding-left: 2.4em;
+    position: relative;
+    &::before {
+      content: "";
+      min-width: 1em;
+      height: 1em;
+      background: $primary;
+      position: absolute;
+      top: 0.21em;
+      border-radius: 0.2em;
+      left: 0;
     }
-    &.__style-3{
-        border-radius: 2em;
-        padding: 0.4em 2.29em;
-    }
-    &.__shadow{
-        box-shadow: 0 3px 27px 0 rgba(251, 110, 0, 0.48);
-    }
-    &.__shadow-2{
-        box-shadow: 0 3px 27px 0 #fb6e00;
-    }
-    &.__large-btn{
-        padding: 0.563em 1.1em;
-        min-width: 10.625em;
-    }
+  }
 }
-.__primary-color{
-    color: $primary;
+.__chevron {
+  &::after {
+    border-style: solid;
+    border-width: 3px 3px 0 0;
+    content: "";
+    display: inline-block;
+    height: 0.4em;
+    left: 0.24em;
+    position: relative;
+    vertical-align: center;
+    width: 0.4em;
+  }
+  &.__-right::after {
+    transform: rotate(45deg);
+  }
+  &.__-bottom::after {
+    transform: rotate(135deg);
+  }
 }
-.__dark-white-color{
-    color: #f2f2f2;
-    &.__shade-2{
-        color: rgba($color: #f2f2f2, $alpha: 0.5);
-    }
+.__badge {
+  background: linear-gradient(to right, #fb6e00 11%, #fa3800 94%);
+  padding: 0.05em 0.46em;
+  border-radius: 8px;
 }
-.__white-color{
-    color: #fff !important;
-    border-color: #fff !important;
+.__small-border {
+  width: 39px;
+  height: 4px;
+  background: $primary;
+  border-radius: 2px;
 }
-.__white{
-    background: #fff;
-    border-color: #fff;
-    color: #000;
-}
-.__unordered-list{
-    list-style-type: none;
-    padding: 0;
-    >li{
-        margin: 1.2em 0;
-        padding-left: 2.4em;
-        position: relative;
-        &::before{
-            content: '';
-            min-width: 1em;
-            height: 1em;
-            background: $primary;
-            position: absolute;
-            top: 0.21em;
-            border-radius: 0.2em;
-            left: 0;
-        }
-    }
-}
-.__chevron{
-    &::after{
-        border-style: solid;
-        border-width: 3px 3px 0 0;
-        content: '';
-        display: inline-block;
-        height: 0.4em;
-        left: 0.24em;
-        position: relative;
-        vertical-align: center;
-        width: 0.4em;
-    }
-    &.__-right::after{
-        transform: rotate(45deg);
-    }
-    &.__-bottom::after{
-        transform: rotate(135deg);
-    }
-}
-.__badge{
-    background: linear-gradient(to right, #fb6e00 11%, #fa3800 94%);
-    padding: 0.05em 0.46em;
-    border-radius: 8px;
-}
-.__small-border{
-    width: 39px;
-    height: 4px;
-    background: $primary;
-    border-radius: 2px;
-}
-.__text-field, .__input-field{
-    font-family: inherit;
-    outline: none;
-    border: none;
+.__text-field,
+.__input-field {
+  font-family: inherit;
+  outline: none;
+  border: none;
 }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-.__text-field{
-    background: rgba(216, 216, 216, 0.6);
+.__text-field {
+  background: rgba(216, 216, 216, 0.6);
+  color: #f2f2f2;
+  padding: 0.675em 1em;
+  border-radius: 6px;
+  border: solid 1px #979797;
+  width: 100%;
+  &::placeholder {
     color: #f2f2f2;
-    padding: 0.675em 1em;
-    border-radius: 6px;
-    border: solid 1px #979797;
-    width: 100%;
-    &::placeholder{
-        color: #f2f2f2;
-        font-style: italic;
-    }
+    font-style: italic;
+  }
 }
-.__input-field{
-    padding: 0.76em 2em;
-    background-color: #35363a;
-    font-size: 15px;
-    border-radius: 2em;
-    color: #fff;
+.__input-field {
+  padding: 0.76em 2em;
+  background-color: #35363a;
+  font-size: 15px;
+  border-radius: 2em;
+  color: #fff;
 }
-label{
-    .__checkbox:checked + span{
-        color: $primary !important;
-    }
+label {
+  .__checkbox:checked + span {
+    color: $primary !important;
+  }
 }
-.__checkbox{
-    padding: 0;
-    margin: 0;
-    position: relative;
-    min-width: 16px;
-    min-height: 16px;
-    visibility: hidden;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    color: #f2f2f2;
-    &::after, &::before{
-        content: '';
-        position: absolute;
-        visibility: visible;
-        border-radius: 3px;
-    }
-    &::before{
-        left: 50%;
-        top: 50%;
-        border: 1px currentColor solid;
-        width: calc(100% - 2px);
-        height: calc(100% - 2px);
-        transform: translate(-50%, -50%);
-        background: transparent;
-    }
-    &::after{
-        left: 0;
-        height: 0;
-        width: 100%;
-        height: 100%;
-        transform: scale(0);
-        background: currentColor;
-        transition: linear 0.1s transform;
-    }
-    &:checked{
-        color: $primary;
-        &::after{
-            transform: scale(0.7);
-        }
-    }
-}
-
-.__outline-badge{
-    padding: 0.54em 1.2em;
-    border: 2px solid;
-    font-size: 0.94em;
-    border-radius: 0.6em;
-    background: #555658;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    svg{
-        margin-right: 0.4em;
-    }
-    &.__active{
-        color: $primary;
-        font-weight: 500;
-        background-color: rgba(99, 99, 99, 0.24);
-    }
-}
-.__pointer{
-    cursor: pointer;
-}
-.__relative{
-    position: relative;
-}
-.__absolute{
+.__checkbox {
+  padding: 0;
+  margin: 0;
+  position: relative;
+  min-width: 16px;
+  min-height: 16px;
+  visibility: hidden;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  color: #f2f2f2;
+  &::after,
+  &::before {
+    content: "";
     position: absolute;
+    visibility: visible;
+    border-radius: 3px;
+  }
+  &::before {
+    left: 50%;
+    top: 50%;
+    border: 1px currentColor solid;
+    width: calc(100% - 2px);
+    height: calc(100% - 2px);
+    transform: translate(-50%, -50%);
+    background: transparent;
+  }
+  &::after {
+    left: 0;
+    height: 0;
+    width: 100%;
+    height: 100%;
+    transform: scale(0);
+    background: currentColor;
+    transition: linear 0.1s transform;
+  }
+  &:checked {
+    color: $primary;
+    &::after {
+      transform: scale(0.7);
+    }
+  }
 }
 
-.__scrollbar{
-    overflow: auto;
-    &::-webkit-scrollbar {
-        width: 0;
-    }
+.__outline-badge {
+  padding: 0.54em 1.2em;
+  border: 2px solid;
+  font-size: 0.94em;
+  border-radius: 0.6em;
+  background: #555658;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  svg {
+    margin-right: 0.4em;
+  }
+  &.__active {
+    color: $primary;
+    font-weight: 500;
+    background-color: rgba(99, 99, 99, 0.24);
+  }
+}
+.__pointer {
+  cursor: pointer;
+}
+.__relative {
+  position: relative;
+}
+.__absolute {
+  position: absolute;
+}
+
+.__scrollbar {
+  overflow: auto;
+  &::-webkit-scrollbar {
+    width: 0;
+  }
 }
