--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -64,6 +64,12 @@
     .__block-on-mediam{
         display: block;;
     }
+    .__h3-on-mediam{
+        font-size: 30px;
+    }
+    .__smaller-on-mediam{
+        font-size: 12px;
+    }
     .__h4-on-mediam{
         font-size: 36px;
     }
