--- a/src/pages/BingoPreGame/BingoGameMain.scss
+++ b/src/pages/BingoPreGame/BingoGameMain.scss
@@ -101,7 +101,15 @@
                 .__h2{
                     line-height: 1em;
                 }
+                .__timer-wrapper{
+                    background: #17181a;
+                    padding: 0.5em 0.8em;
+                    border-radius: 1em;
+                }
             }
+        }
+        .__bing-2-game-wrapper{
+            margin-bottom: 6em;
         }
     }
 }
