design-the-bing-in-progress-page

--- a/src/pages/BingoPreGame/BingoPreGame.scss
+++ b/src/pages/BingoPreGame/BingoPreGame.scss
@@ -1,3 +1,7 @@
 .__BingoPreGame{
-
+    @media (max-width: 1200px) and (min-width: 380px) {
+        .__main-center .__title{
+            min-width: 50%;
+        }
+    }
 }
