--- a/src/pages/CardGame/cardGamePage.module.scss
+++ b/src/pages/CardGame/cardGamePage.module.scss
@@ -125,6 +125,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 180px;
 
     .__sidebar_header_title {
       font-size: 24px;
@@ -151,7 +152,7 @@
   .__sidebar_button_wrapper {
     margin: 30px 0 0 0;
     display: flex;
-    flex: 0.7;
+    flex: 0.85;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
