--- a/src/pages/CardGame/cardGamePage.module.scss
+++ b/src/pages/CardGame/cardGamePage.module.scss
@@ -30,6 +30,16 @@
     align-items: center;
     flex-direction: column;
 
+    ._card_game_content_header_text {
+      font-size: 17px;
+      width: 49%;
+      text-align: center;
+
+      span {
+        color: $primary;
+      }
+    }
+
     .__card_game_card_counter {
       margin: 0;
       font-size: 16px;
