--- a/src/pages/ChaseACard/cardGamePage.module.scss
+++ b/src/pages/ChaseACard/cardGamePage.module.scss
@@ -24,7 +24,7 @@
   }
 
   ._card_game_content_top {
-    margin: 40px 0;
+    margin: 40px 0 65px 0;
     padding: 0;
     display: flex;
     justify-content: center;
@@ -71,10 +71,107 @@
   .__card_game_content_body {
     display: flex;
     width: 100%;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
     flex-direction: column;
     margin: 0 0 30px 0;
+
+    .__card_game_content_game_end {
+      position: absolute;
+      border-radius: 5px;
+      transform: translate(0, -50%);
+    }
+
+    .__card_game_content_game_end_failed {
+      background-color: #3e232a;
+    }
+
+    .__card_game_content_game_end_success {
+      background-color: #1f3832;
+    }
+
+    .__card_game_content_body_on_end {
+      margin: 100px 0 0 0;
+      background-color: aliceblue;
+      position: absolute;
+    }
+
+    .dashed_repeating_gradient {
+      background-image: repeating-linear-gradient(
+          to right,
+          $grey 0%,
+          $grey 50%,
+          transparent 50%,
+          transparent 100%
+        ),
+        repeating-linear-gradient(
+          to right,
+          $grey 0%,
+          $grey 50%,
+          transparent 50%,
+          transparent 100%
+        ),
+        repeating-linear-gradient(
+          to bottom,
+          $grey 0%,
+          $grey 50%,
+          transparent 50%,
+          transparent 100%
+        ),
+        repeating-linear-gradient(
+          to bottom,
+          $grey 0%,
+          $grey 50%,
+          transparent 50%,
+          transparent 100%
+        );
+      background-position: left top, left bottom, left top, right top;
+      background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
+      background-size: 20px 1px, 20px 1px, 1px 20px, 1px 20px;
+    }
+
+    .__card_game_timer_wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      width: 302px;
+      margin: 10px auto;
+      padding: 12px;
+
+      p {
+        font-size: 18px;
+        text-align: center;
+      }
+
+      strong {
+        font-size: 18px;
+        font-weight: 600;
+        color: $primary;
+        margin: 12px 0 6px 0;
+      }
+
+      .__card_game_card_top_btn {
+        height: 44px;
+        width: 250px;
+        display: flex;
+        justify-content: space-around;
+        font-size: 18px;
+        font-weight: 600;
+        box-shadow: 0px 0px 12px 0.5px $primary;
+
+        span {
+          background-color: $lightBlack2;
+          height: 24px;
+          line-height: 25px;
+          width: 66px;
+          border-radius: 1em;
+          font-size: 16px;
+          font-weight: 500;
+          color: $primary;
+        }
+      }
+    }
 
     .__reload_svg_icon {
       display: flex;
