--- a/src/pages/Login/index.module.scss
+++ b/src/pages/Login/index.module.scss
@@ -26,7 +26,6 @@
 
     .header_content {
       position: absolute;
-      z-index: 1;
       width: 100%;
       height: 50%;
       display: flex;
@@ -73,10 +72,19 @@
       width: 34%;
       margin: 0 auto;
       border-radius: 7px;
-      transform: translate(0, -100%);
-      box-shadow: 0 0px 12px 2px rgba(0, 0, 0, 0.5);
+      transform: translate(0, -50%);
+      box-shadow: 0px 12px 30px 3px rgba(0, 0, 0, 0.5);
       padding: 60px 50px;
-      z-index: 1;
+
+      .login_btn {
+        margin: 0px auto;
+        width: 90%;
+        height: 80px;
+        position: relative;
+        transform: translate(7%, 120%);
+        font-size: 24px;
+        text-transform: uppercase;
+      }
     }
   }
 }
