--- a/src/pages/Elite8Draw/Elite8draw.scss
+++ b/src/pages/Elite8Draw/Elite8draw.scss
@@ -88,6 +88,7 @@
           letter-spacing: -0.22px;
           text-align: center;
           color: $primary;
+          margin-bottom: 60px;
         }
       }
     }
@@ -144,18 +145,8 @@
         .__numbers_row {
           justify-content: flex-start;
           margin-top: 21px;
-          .__my_number_ball {
-            width: 56px;
-            height: 56px;
-            margin: 0 16px 0 0;
-            box-shadow: 3px 4px 6px 0 rgba(0, 0, 0, 0.54);
-            border-radius: 100%;
-            background-image: linear-gradient(223deg, #ffffff 47%, #dbdbdb 20%);
-            border: solid 8px #b24e00;
-            font-size: 20px;
-            font-weight: 500;
-            color: #1e1e1e;
-          }
+          align-items: baseline;
+         
         }
       }
     }
