Power Royals First card suit

--- a/src/pages/RoyalGame/cardGamePage.module.scss
+++ b/src/pages/RoyalGame/cardGamePage.module.scss
@@ -81,7 +81,7 @@
     display: flex;
     width: 823px;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
   }
 
