--- a/src/components/GameCard/gameCard.module.scss
+++ b/src/components/GameCard/gameCard.module.scss
@@ -35,6 +35,7 @@
   .__game_card_popup_container {
     display: flex;
     flex: 1;
+    width: 100%;
     flex-direction: column;
     align-items: center;
     position: absolute;
@@ -59,7 +60,7 @@
     border-radius: 8px;
     margin: 0;
     border: none;
-    // width: 220px;
+    width: 220px;
 
     .__btn__ {
       display: flex;
