--- a/src/components/GameCard/gameCard.module.scss
+++ b/src/components/GameCard/gameCard.module.scss
@@ -18,6 +18,12 @@
     border: dashed 1px $grey;
     justify-content: center;
     align-items: center;
+
+    strong {
+      text-align: center;
+      font-size: 16px;
+      width: 60%;
+    }
   }
 
   .__game_card_selected {
@@ -35,7 +41,7 @@
   .__game_card_popup_container {
     display: flex;
     flex: 1;
-    width: 100%;
+    // width: 100%;
     flex-direction: column;
     align-items: center;
     position: absolute;
@@ -60,7 +66,7 @@
     border-radius: 8px;
     margin: 0;
     border: none;
-    width: 220px;
+    // width: 220px;
 
     .__btn__ {
       display: flex;
